test/errors/resolution/tupleExpandNamedArgs.chpl
proc f(a: int, b: int, c: int) {}
var t = (2,3);
f(a=(...t));
