test/errors/resolution/tupleExpandNamedArgs.1.good
tupleExpandNamedArgs.chpl:3: error: tuple expansion cannot be used to pass values to a non-variadic named argument
tupleExpandNamedArgs.chpl:3: error: unable to resolve call to 'f': no matching candidates
tupleExpandNamedArgs.chpl:1: note: the following candidate didn't match because the provided actuals could not be mapped to its formals
